Atualização de todos .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
-/venv
-/**/__pycache__
+/**/venv/
+/**/.venv/
+/**/.idea/
+/**/.code/
+/**/.vscode/
+/**/.pytest_cache/
+/**/__pycache__/
+/**/log-database.db
+/**/.vs/
